<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lsi.proyecto6to.com.nalikeoffers.LoginActivity"
    android:background="@drawable/fondo"
    android:id="@+id/svLogin"

    >

    <RelativeLayout

        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_width="520dp"
        android:layout_height="120dp"

        android:layout_marginTop="30dp"
        android:src="@drawable/logo_splash"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tvTitleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorBlanco1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/imgLoginLogo"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tvSubTitleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorBlanco1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_below="@+id/tvTitleLogin"
        android:gravity="center"
        />


    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        android:background="@drawable/bg_texto"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:text=""
        android:hint="@string/hint_email"

        android:layout_below="@+id/tvSubTitleLogin"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"

        />


    <EditText
        android:id="@+id/etPassLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        android:background="@drawable/bg_texto"
        android:gravity="center"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/hint_pass"

        android:layout_below="@+id/etEmailLogin"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"

        />

    <TextView
        android:id="@+id/tvRecuperarPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_pass"
        android:textStyle="bold"
        android:textColor="@color/colorBlanco1"
        android:layout_marginTop="20dp"

        android:layout_below="@+id/etPassLogin"
        android:layout_centerInParent="true"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"

        android:layout_below="@+id/tvRecuperarPassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"

        android:layout_below="@+id/tvRecuperarPassword"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/btnIngresarLogin"
            android:layout_width="155dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_ingresar" />

        <Button
            android:id="@+id/btnRegistrarLogin"
            android:layout_width="165dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_registrar" />

    </LinearLayout>
</RelativeLayout>
</ScrollView>